新增开机自动加载数据库的计划任务
